Revision history for Capture-Tiny

{{$NEXT}}

0.19      2012-08-06 20:26:34 America/New_York

  Fixed:

  - Work around rt.perl.org #114404 by forcing PerlIO layers back on
    original handles [rt.cpan.org #78819]

0.18      2012-05-04 16:31:53 America/New_York

  Added:

  - When capture or tee are called in void context, Capture::Tiny
    skips reading back from the capture handles if it can do so safely

0.17_52   2012-03-09 11:45:19 EST5EDT

  Fixed:

  - Tied STDIN is always localized before redirections to avoid tees
    hanging on MSWin32
    
  - Copying and reopening STDIN is necessary to avoid tees hanging on MSWin32.

0.17_51   2012-03-07 18:22:34 EST5EDT

  Fixed:

  - Avoids reopening STDIN while setting up a capture, which avoids
    some problems with pathological tied filehandle implementations
    such as in FCGI

  Tested:

  - Re-enabled tied STDIN testing for MSWin32 to see if changes above
    avoid crashes seen historically

0.17      2012-02-22 08:07:41 EST5EDT

  Fixed:

  - Added a workaround for failing t/08-stdin-closed.t under blead
    perl / 5.15.8 [rt.perl.org #111070]

  Documented:

  - Clarified some limitations; added a link to CPAN Testers Matrix;
    removed redundant BUGS section; standardized terminology

  Tested:

  - Added a test using Inline::C to print to stdout and stderr in response
    to rt.cpan.org #71701

0.16      2012-02-12 21:04:24 EST5EDT

  Documented:

  - Noted problems and workaround for FCGI's pathological tied STDIN
    [rt.cpan.org #74681; thank you Karl Gaissmaier for testing the
    workaround]

0.15      2011-12-23 11:10:47 EST5EDT

  Fixed:

  - Repeated captures from a custom filehandle would return undef instead
    of the empty string (and would warn). This has been fixed.
    [rt.cpan.org #73374 part two. Thank you to Philipp Herz for help
    in reproducing this bug.]

  Other:

  - Commented out debugging code for slightly less runtime overhead

0.14      2011-12-22 10:14:09 EST5EDT

  Added:
