@@ -2,6 +2,11 @@ Revision history for Capture-Tiny
 
 {{$NEXT}}
 
+  Fixed:
+
+  - Nested merged captures that include an external program call no longer
+    leak STDERR to the outer scope [rt.cpan.org #79376]
+
 0.19      2012-08-06 20:26:34 America/New_York
 
   Fixed:
